test/functions/vass/subclass-to-ref-formal.good
subclass-to-ref-formal.chpl:14: error: value from coercion passed to ref formal 'lhs'
